// Copyright 2014 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
//
// Protocol buffer definition for a database of DocumentActivity state.

syntax = "proto2";

package org.chromium.chrome.browser.tabmodel.document;

option java_outer_classname = "DocumentTabModelInfo";
option java_package = "org.chromium.chrome.browser.tabmodel.document";

message DocumentEntry {
  // Next ID to use: 7
  optional bool can_go_back = 4;
  required int32 tab_id = 5;
  optional bool is_covered_by_child_activity = 6;
}

message DocumentList {
  // Next ID to use: 2
  repeated DocumentEntry entries = 1;
}
